fix-Abnormal spacing in the view tab bar#6203

--- a/packages/datasheet/src/pc/components/tab_bar/tab/view_bar/style.module.less
+++ b/packages/datasheet/src/pc/components/tab_bar/tab/view_bar/style.module.less
@@ -75,6 +75,9 @@
 .viewBar {
   height: 40px;
   margin-top: 9px;
+  >div:first-child{
+    flex-basis: 0;
+  }
 }
 
 .viewBarItem {
